# mcp-geonode-api

./: .env.sample  .gitignore  README.md  pyproject.toml
docs/: original-plan.md
src/geonode_mcp/: __init__.py  __main__.py  client.py  compatibility.py  config.py  config_verifier.py  config_writer.py  detection.py  server.py  snippets.py
src/geonode_mcp/models/: __init__.py  common.py  datasets.py  documents.py  maps.py  resources.py  user_workflows.py  users.py
src/geonode_mcp/tools/: __init__.py  categories.py  datasets.py  documents.py  maps.py  resources.py  user_workflows.py  users.py
tests/: test_client_security.py  test_config_and_snippets.py  test_metadata_search.py  test_user_workflows.py
